--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "node-uuid": "^1.4.7"
   },
   "devDependencies": {
+    "coveralls": "^2.11.14",
     "expect": "^1.20.2",
     "mocha": "^3.1.2",
+    "mocha-lcov-reporter": "^1.2.0",
     "nodemon": "^1.11.0",
     "superagent": "^2.3.0",
     "supertest": "^2.0.0"
