--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
 node_js:
     - node
-script: "npm run-script test-travis"
+script: ["npm run-script test-travis", "npm run docs"]
 after_script: "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
